[gd_scene load_steps=5 format=3 uid="uid://bs1usw1axsktt"]

[ext_resource type="Script" path="res://assets/scripts/powerup.gd" id="1_ehsmv"]
[ext_resource type="Texture2D" uid="uid://x4ydshfe2f41" path="res://assets/sprites/ex2.png" id="2_662x7"]
[ext_resource type="Texture2D" uid="uid://dhwddux80wrti" path="res://assets/sprites/breach.png" id="2_gunqs"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ea6eq"]
radius = 15.0

[node name="RigidBody2D" type="RigidBody2D"]
top_level = true
collision_layer = 8
mass = 0.1
script = ExtResource("1_ehsmv")
ROLL_SPEED = 75

[node name="StaticBody2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("CircleShape2D_ea6eq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ea6eq")

[node name="sprites" type="Node2D" parent="."]

[node name="ex2_sprite" type="Sprite2D" parent="sprites"]
visible = false
modulate = Color(1, 0, 0.282353, 1)
scale = Vector2(0.869999, 0.867561)
texture = ExtResource("2_662x7")

[node name="breach_sprite" type="Sprite2D" parent="sprites"]
visible = false
modulate = Color(0, 0.862745, 0.862745, 1)
scale = Vector2(0.860001, 0.859999)
texture = ExtResource("2_gunqs")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../raycasts")
update_rotation = false

[node name="raycasts" type="Node2D" parent="."]
top_level = true

[node name="floor_raycast" type="RayCast2D" parent="raycasts"]
target_position = Vector2(0, 21)

[node name="left_raycast" type="RayCast2D" parent="raycasts"]
target_position = Vector2(-21, 0)

[node name="right_raycast" type="RayCast2D" parent="raycasts"]
target_position = Vector2(21, 0)

[node name="despawn_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="low_health_timer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[connection signal="body_entered" from="StaticBody2D" to="." method="_on_static_body_2d_body_entered"]
[connection signal="timeout" from="despawn_timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="low_health_timer" to="." method="_on_low_health_timer_timeout"]
